@@ -181,7 +181,7 @@ static void OvmsServerV3MongooseCallback(struct mg_connection *nc, int ev, void 
   }
 
 OvmsServerV3::OvmsServerV3(const char* name)
-  : OvmsServer(name)
+  : OvmsServer(name), m_metrics_filter(TAG)
   {
   if (MyOvmsServerV3Modifier == 0)
     {
@@ -297,9 +297,14 @@ void OvmsServerV3::TransmitModifiedMetrics()
 
 void OvmsServerV3::TransmitMetric(OvmsMetric* metric)
   {
+  auto const metric_name = metric->m_name;
+
+  if (!m_metrics_filter.CheckFilter(metric_name))
+    return;
+
   std::string topic(m_topic_prefix);
   topic.append("metric/");
-  topic.append(metric->m_name);
+  topic.append(metric_name);
 
   // Replace '.' inside the metric name by '/' for MQTT like namespacing.
   for(size_t i = m_topic_prefix.length(); i < topic.length(); i++)
@@ -832,6 +837,8 @@ void OvmsServerV3::ConfigChanged(OvmsConfigParam* param)
   m_updatetime_on = MyConfig.GetParamValueInt("server.v3", "updatetime.on", m_updatetime_idle);
   m_updatetime_charging = MyConfig.GetParamValueInt("server.v3", "updatetime.charging", m_updatetime_idle);
   m_updatetime_sendall = MyConfig.GetParamValueInt("server.v3", "updatetime.sendall", 0);
+  m_metrics_filter.LoadFilters(MyConfig.GetParamValue("server.v3", "metrics.include"),
+                               MyConfig.GetParamValue("server.v3", "metrics.exclude"));
   }
 
 void OvmsServerV3::NetUp(std::string event, void* data)
