@@ -1,6 +1,10 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- OVMS Server v3 metrics filtering
+  New configs:
+    [server.v3] metrics.include         -- Comma-separated list of metric names (with possible wildcard) matching metrics to send
+    [server.v3] metrics.exclude         -- Comma-separated list of metric names (with possible wildcard) matching metrics to not send
 - Renault Zoe Phase 2: Initial support
 - Improved output of bms shell command for narrow windows.
   New commands:
